# exploring_qt

designer/task1/: CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
lot_signal/task1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
main_modules/task1/: CMakeLists.txt  main.cpp
pre_concurrent/task1/: CMakeLists.txt  example_race.cpp  example_race.h  mainwindow.cpp  mainwindow.h
pre_graphic/task1/: CMakeLists.txt  graphicchart.cpp  graphicchart.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
widgets/task1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
